# cronslator

./: README.md  copilot-summary.md  pyproject.toml
src/cronslator/: __init__.py  cli.py  cronslator.py
src/pyslop/cronslator/: __init__.py  cli.py  cronslator.py
tests/: test_cli.py  test_cronslate.py  test_readme_examples.py
