[tool.poetry]
name = "pyslop-cronslator"
version = "0.2.0"
description = "Natural Language to Cron"
authors = ["Harshad Sharma <harshad@sharma.io>"]
readme = "README.md"
packages = [{ include = "pyslop", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[tool.poetry.scripts]
cronslate = "pyslop.cronslator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
